# ai-avatar-platform

./: .gitignore  CLAUDE.md  README.md  docker-compose.yaml
ai-model-gateway/: .env.example  .npmrc  README.md  package-lock.json  package.json
ai-model-gateway/src/: app.ts  main.ts
ai-model-result/: .env.example  package-lock.json  package.json
ai-model-result-service/: .env.example  package-lock.json  package.json
ai-model-result-service/src/: logger.ts  main.ts
ai-model-result/src/: main.ts
ai-toolkit/: Dockerfile  README.md  entrypoint.sh
ai-toolkit/ai_toolkit/: logger.py  main.py  message_queue.py  models.py  storage.py  training.py
api-gateway/: .env.example  .gitignore  .npmrc  README.md  package-lock.json  package.json
api-gateway/src/: app.ts  server.ts
audio-generator/: package-lock.json  package.json
auth-service/: package-lock.json  package.json
avatar/: .env.example  .npmrc  README.md  package-lock.json  package.json
avatar-service/: .env.example  package-lock.json  package.json  tsconfig.json
cropper/: .env.example  .gitignore  Dockerfile  Dockerfile.dev  README.md  detector.py  main.py  pyproject.toml  requirements.txt  storage.py
cropper/controllers/: crop.py
cropper/services/: job_service.py  storage.py
cropper/utils/: detector.py
face-matcher/: .env.example  .gitignore  Dockerfile  Dockerfile.dev  README.md  main.py  models.py  pyproject.toml  requirements.txt  storage.py
face-matcher/adaface/: net.py
face-matcher/services/: job_manager_service.py  storage.py
face-matcher/utils/: matcher.py  service_client.py
firebase/: firebase.json  firestore.indexes.json  firestore.rules  storage.rules
gen-flux2-dev/: .env.example  Dockerfile  README.md  entrypoint.sh  requirements.txt
gen-qwen-2511/: .env.example  Dockerfile  README.md  entrypoint.sh  requirements.txt
gen-qwen-edit-2511/: .env.example  .gitignore  Dockerfile  README.md  entrypoint.sh  requirements.txt
gen-text-image-to-image-service/: .env.example  Dockerfile  README.md  entrypoint.sh
gen-ti2i-controlnet/: .env.example  Dockerfile  README.md  entrypoint.sh  requirements.txt
gen-wan-22/: Dockerfile  README.md
gen-wan-22-mimic-motion/: Dockerfile  README.md  entrypoint.sh  requirements.txt
gen-wan-22-ti2v/: Dockerfile  README.md  entrypoint.sh  requirements.txt
gen-wan-22-vace/: Dockerfile  README.md  entrypoint.sh  requirements.txt
golden-images/: .gitignore
head-direction-checker/: .env.example  .gitignore  .npmrc  Dockerfile  README.md  package-lock.json  package.json
image-generator/: .env.example  package-lock.json  package.json
image-resizer/: .env.example  Dockerfile.dev  README.md  package-lock.json  package.json
job-manager/: .env.example  .npmrc  Dockerfile.dev  README.md  package-lock.json  package.json
job-manager-service/: .env.example  package-lock.json  package.json
landing-page/: .firebaserc  README.md  index.html  style.css
lip-sync/: package-lock.json  package.json
llm-request/: .env.example  package-lock.json  package.json
llm-request-service/: package.json
media/: .env.example  package-lock.json  package.json
media-service/: .env.example  package-lock.json  package.json
prompt-gateway/: .env.example  .gitignore  README.md  package-lock.json  package.json
prompt-upsampler-service/: package.json
runpod/: .env.example  package-lock.json  package.json
runpod-service/: package.json
scripts/: collectVoiceOptions.js  migrate-createdAt.sh  package-lock.json  package.json  reinstall-shared-js.sh  reinstall-shared-py.sh  reinstall-shared-ts.sh  syncVoices.js  train-loras.js
shared-library/: README.md  package.json
shared-library-ts/: .npmrc  README.md  package-lock.json  package.json
shared-package-py/: .gitignore  README.md  pyproject.toml
shared-package-py/loom24_shared/: __init__.py  logger.py
shared-package-py/loom24_shared/services/: __init__.py  message_queue.py  service_client.py  storage_client.py
shared-package-py/loom24_shared/types/: __init__.py  avatar.py  constants.py  image.py  job.py  user.py  video.py  voice.py
thumbnail-maker/: .env.example  Dockerfile.dev  README.md  package-lock.json  package.json
train-ai-toolkit/: Dockerfile  README.md  entrypoint.sh  requirements.txt
train-lora-qwen-edit-2511/: .env.example  Dockerfile  README.md  entrypoint.sh  requirements.txt
train-videox-fun/: Dockerfile  README.md  entrypoint.sh
ui-app/: .env.example  .npmrc  README.md  index.html  package-lock.json  package.json  tailwind.config.js
upscaler/: .env.example  package-lock.json  package.json
user/: .env.example  .npmrc  README.md  package-lock.json  package.json
user-service/: .env.example  package.json
video-generator/: package-lock.json  package.json
video-trimmer/: .env.example  .npmrc  README.md  package-lock.json  package.json
voice/: .env.example  .npmrc  README.md  package-lock.json  package.json
voice-service/: .env.example  .gitignore  Dockerfile  package-lock.json  package.json
workflow-manager/: .env.example  .npmrc  Dockerfile  README.md  package-lock.json  package.json
(+464 files in other folders)
