[tool.poetry]
name = "cropper"
version = "0.1.0"
description = "Image cropping service"
authors = []

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "0.136.3"
uvicorn = {extras = ["standard"], version = "0.49.0"}
mediapipe = "0.10.21"
Pillow = "12.2.0"
google-cloud-storage = "3.11.0"
python-dotenv = "1.2.2"
numpy = "1.26.4"
loom24-shared = {version = "0.0.17", source = "loom24-pypi"}

[[tool.poetry.source]]
name = "loom24-pypi"
url = "https://us-central1-python.pkg.dev/loom24-mvp/loom24-pypi/simple/"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
