[tool.poetry]
name = "cropper"
version = "0.1.0"
description = "Image cropping service"
authors = []

[tool.poetry.dependencies]
python = "^3.12"
ultralytics = {version = "8.3.202", markers = "sys_platform == 'linux'"}
torch = {version = "2.7.1+cpu", source = "pytorch-cpu", markers = "sys_platform == 'linux'"}
torchvision = {version = "0.22.1+cpu", source = "pytorch-cpu", markers = "sys_platform == 'linux'"}
Pillow = "12.2.0"
google-cloud-storage = "3.11.0"
google-cloud-pubsub = "2.39.0"
python-dotenv = "1.2.2"
numpy = "1.26.4"
loom24-shared = {version = "0.0.33", source = "loom24-pypi"}
watchfiles = "1.2.0"

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "supplemental"

[[tool.poetry.source]]
name = "loom24-pypi"
url = "https://us-central1-python.pkg.dev/loom24-mvp/loom24-pypi/simple/"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
