[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "loom24-shared"
version = "0.0.29"
requires-python = ">=3.10"
dependencies = [
    "pydantic==2.13.4",
    "requests==2.34.2",
    "google-cloud-storage==3.11.0",
    "google-cloud-pubsub==2.39.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["loom24_shared*"]
